<resources>
    <string name="app_name">쁠원</string>
    <string name="introment">계정이 있으신가요?</string>
    <string name="password">비밀번호</string>
    <string name="emailadress">이메일 주소</string>
    <string name="login">Login</string>
    <string name="user_name">NickName</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="search">검색</string>

    <string name="upload_article">내가 올린 쿠폰</string>
    <string name="get_coupon">산 쿠폰 목록</string>
    <string name="settings">설정</string>
    <string name="notify">신고하기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_content">hello_recipe</string>

    <!-- Recover password Activity-->
    <string name="text_find_password_description">이메일 인증을 통해 비밀번호 찾기가 진행됩니다.</string>
    <string name="text_name">이름</string>
    <string name="text_check">인증 번호</string>
    <string name="text_fine_pwd">인증번호 전송</string>
    <string name="text_auth_check">인증번호 입력</string>
    <string name="r_password">새로운 비밀번호</string>
    <string name="r_c_password">비밀번호 확인</string>
    <string name="text_recreatpwd">비밀번호 재설정</string>

    <string name="recipe_title">제목</string>
    <string name="title">제목을 입력하세요</string>
    <string name="content">레시피 설명</string>
    <string name="content_input">내용을 입력하세요 </string>

    <string name="text_mypage">Mypage</string>
    <string name="text_expirationdate">예) 2021-01-01</string>
</resources>