<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/upload_article"
            android:icon="@drawable/upload_article"
            android:title="@string/upload_article" />
        <item
            android:id="@+id/get_coupon"
            android:icon="@drawable/my_coupon"
            android:title="@string/get_coupon" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/notify"
            android:icon="@drawable/notify"
            android:title="@string/notify"/>
    </group>
</menu>