<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ccuda.ui.home.HomeFragment"
        android:label="@string/upload_article"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.ccuda.ui.gallery.GalleryFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_upload_article" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.ccuda.ui.slideshow.SlideshowFragment"
        android:label="@string/notify"
        tools:layout="@layout/fragment_slideshow" />
</navigation>