<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_Recipe.RecipeRegisterFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:padding="13dp"
        android:text="@string/recipe_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/additemtext"
        android:layout_width="113dp"
        android:layout_height="31dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:padding="7dp"
        android:text="관련 품목 추가"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="413dp"
        android:layout_height="65dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additemtext">

        <Button
            android:id="@+id/additem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/gray"
            android:text="품목 추가" />
    </LinearLayout>

    <TextView
        android:id="@+id/content"
        android:layout_width="86dp"
        android:layout_height="32dp"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/editContent"
        android:layout_width="407dp"
        android:layout_height="292dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/content_input"
        android:inputType="text"
        android:padding="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="등록"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContent" />

    <TextView
        android:id="@+id/mainimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="메인 사진 추가"
        app:layout_constraintBottom_toTopOf="@+id/additemtext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.54" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="80dp"
        android:text="메인 사진 추가"
        app:layout_constraintBottom_toTopOf="@+id/additemtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toEndOf="@+id/mainimage"
        app:layout_constraintTop_toTopOf="@+id/edit_title"
        app:layout_constraintVertical_bias="0.416" />
</androidx.constraintlayout.widget.ConstraintLayout>