<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_Recipe.RecipeRegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:padding="13dp"
                    android:text="@string/recipe_title"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/title"
                    android:inputType="text" />
            </LinearLayout>


            <Button
                android:id="@+id/add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="사진 추가" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imageRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!--구분선-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:background="#aaa" />


            <TextView
                android:id="@+id/additemtext"
                android:layout_width="113dp"
                android:layout_height="31dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="관련 품목 추가"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/conv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="편의점명"
                    android:textSize="15dp"></TextView>

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/prod_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="품목"
                    android:textSize="15dp"></TextView>

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/searchProd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"></com.toptoche.searchablespinnerlibrary.SearchableSpinner>

                <TextView
                    android:id="@+id/resultView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"></TextView>

            </LinearLayout>

            <!--구분선-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:background="#aaa" />

            <TextView
                android:id="@+id/content"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/content"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editContent"
                android:layout_width="match_parent"
                android:layout_height="368dp"
                android:layout_margin="10dp"
                android:layout_marginBottom="8dp"
                android:ems="3"
                android:gravity="start"
                android:hint="@string/content_input"
                android:inputType="text" />

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/orange"
                android:text="등록" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>